# austack

./: .beamignore  .env.template  .gitignore  Makefile  README.md  pyproject.toml
austack/applications/: conversation.py
austack/client/: __init__.py  conversation_client.py
austack/client/audio/: __init__.py  config.py  interface.py
austack/core/: base.py  turn_taking.py
austack/core/llm/: Baml.py
austack/core/llm/baml_client/: __init__.py  async_client.py  globals.py  inlinedbaml.py  parser.py  runtime.py  stream_types.py  sync_client.py  type_builder.py  type_map.py  types.py
austack/core/llm/baml_src/: conversational.baml
austack/core/stt/: Deepgram.py
austack/core/tts/: Deepgram.py
austack/server/: app.py
deploy/beam/: Dockerfile.server  app.py
examples/: test_client.py
examples/conversational/docker/: Dockerfile.react  Dockerfile.server  docker-compose.yml
examples/conversational/react/: index.html  package-lock.json  package.json  vite.config.ts
examples/conversational/react/src/: App.tsx
examples/conversational/react/src/components/: ConversationApp.tsx  PulsingBubble.tsx
scripts/: __init__.py  deploy-server-beam.sh  setup-env.py
sdk/nodejs/: README.md  package-lock.json  package.json  tsconfig.json
sdk/nodejs/src/: AudioInterface.ts  ConversationManager.ts  WebSocketManager.ts  index.ts
